# calcimp-python

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py  test_calcimp.py  test_sample_xmen_files.py  test_xmensur_standalone.c
.github/workflows/: build.yml  release.yml
calcimp/: __init__.py  calcimp_wrapper.py  xmensur.py
doc/: xmensur.md  zmensur.md
example/: calcimp-print.py  compare_closed.ipynb  compare_impedance.ipynb  compare_options.ipynb  compare_time.ipynb
org/: calcimp.c
sample/: branch.xmen  closed.imp  closed.men  test.men  test.xmen  test_pycalcimp.imp  trumpet_valve.xmen
src/: acoustic_constants.c  acoustic_constants.h  calcimp.c  calcimp.h  cephes.h  j1.c  kutils.c  kutils.h  matutil.c  matutil.h  mconf.h  xmensur.c  xmensur.h  xmensur.py  xydata.c  xydata.h  zmensur.c  zmensur.h
test/: README_TESTS.md  calcimp-print.py  compare_impedance.ipynb  compare_structures.py  debug_mensur.py  debug_structure.py  sample_xmensur.xmen  sample_xmensur_equiv.men  test_calcimp.py  test_crash.py  test_format_parsing.py  test_xmensur_equiv.py  test_xmensur_validation.py  test_xmensur_variables.py
