[build-system]
requires = ["setuptools>=42", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "calcimp-python"
version = "0.6.0"
description = "Calculate input impedance of tubes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
]
